# zenpipe

./: .gitignore  .gitmodules  AutoModes.md  CHANGELOG.md  CLAUDE.md  CLI-SPEC.md  CODEC-WISDOM.md  CONTEXT-HANDOFF.md  Cargo.toml  DESIGN-v2.md  FEEDBACK.md  IMAGEFLOW-MAGIC-SPEC.md  ORDERING-DESIGN.md  PROPOSAL-v3.md  README.md  ROADMAP.md  SIMD_WARP_NOTES.md  WASM-AUDIT.md  WASM-SIMD-FINDINGS.md  api-design.md  featreq.md  justfile
demo/crate/: Cargo.toml
demo/crate/.cargo/: config.toml
demo/crate/src/: decode.rs  editor.rs  encode.rs  lib.rs  schema.rs  wasm_api.rs
demo/crate/target-threaded/: .rustc_info.json
demo/crate/target-threaded/release/.fingerprint/anyhow-39fd43c8fca1c3c1/: build-script-build-script-build  build-script-build-script-build.json
demo/crate/target-threaded/release/.fingerprint/archmage-macros-0ee8af15e3aa698c/: lib-archmage_macros  lib-archmage_macros.json
demo/crate/target-threaded/release/.fingerprint/arg_enum_proc_macro-5b6fee8300ee30b6/: lib-arg_enum_proc_macro  lib-arg_enum_proc_macro.json
demo/crate/target-threaded/release/.fingerprint/atomig-macro-d8e6a988b297a222/: lib-atomig_macro  lib-atomig_macro.json
demo/crate/target-threaded/release/.fingerprint/autocfg-bde4f3fb88940f9a/: lib-autocfg  lib-autocfg.json
demo/crate/target-threaded/release/.fingerprint/built-06961c29a7cd11ff/: lib-built  lib-built.json
demo/crate/target-threaded/wasm32-unknown-unknown/release/: libzenpipe_demo.d  zenpipe_demo.d
fuzz/: Cargo.toml  seed_corpus.sh  seed_corpus_tool.rs
fuzz/fuzz_targets/: fuzz_job_decode.rs  fuzz_job_transcode.rs
fuzz/regression/fuzz_animation/: crash-49876bf8379ac99ef8b652267b56a52d15515088
wasm-size-shim/: .gitignore  Cargo.toml
wasm-size-shim/src/: lib.rs  main.rs  native_bench.rs
zcimg/: Cargo.toml
zcimg/src/: batch.rs  info.rs  main.rs  metadata.rs  output.rs  process.rs
zencodecs/: CLAUDE.md  Cargo.toml  Cross.toml  DESIGN-v2.md  README.md  SLIM-PLAN.md  TRAIT-WIRING-PLAN.md  api-feedback.md  compare_probe.sh  featreq.md  heaptrack.heaptrack_zencodec_traits.1877740.zst
zencodecs/benchmarks/: quality_calibration_2026-03-08.csv  quality_calibration_v2_2026-03-08.csv
zencodecs/examples/: gainmap_inspect.rs  heaptrack_zencodec_traits.rs  icc_roundtrip.rs  metadata_roundtrip.rs  quality_calibrate.rs  wasm_roundtrip.rs
zencodecs/fuzz/: Cargo.toml  README.md  multiformat.dict  seed_corpus_tool.rs
zencodecs/fuzz/fuzz_targets/: fuzz_animation.rs  fuzz_decode.rs  fuzz_decode_limits.rs  fuzz_depthmap.rs  fuzz_exif.rs  fuzz_gainmap.rs  fuzz_probe.rs  fuzz_push_decode.rs  fuzz_roundtrip.rs  fuzz_select.rs  fuzz_transcode.rs
zencodecs/fuzz/regression/fuzz_decode/: crash-cab46e33b0396176fabc641c529b8805d0b8598f
zencodecs/fuzz/regression/fuzz_depthmap/: crash-e4c55d09d7dd56d0aaedfb888778a6830d85191c
zencodecs/fuzz/regression/fuzz_gainmap/: crash-b48d8879f5e605c91bd4883a04950397dc7fba01
zencodecs/fuzz/regression/fuzz_push_decode/: crash-40cb96a53edf3452329bc23b6aa31871f9d1cb3a
zencodecs/src/: color.rs  config.rs  decision.rs  decode.rs  depthmap.rs  dispatch.rs  encode.rs  error.rs  format_set.rs  gainmap.rs  intent.rs  limits.rs  pixel.rs  policy.rs  quality.rs  registry.rs  riapi_parse.rs  select.rs  trace.rs  transcode.rs  zennode_defs.rs
zencodecs/src/codecs/: avif_dec.rs  avif_enc.rs  bmp.rs  farbfeld.rs  gif.rs  heic.rs  jp2.rs  jpeg.rs  jxl_dec.rs  jxl_enc.rs  png.rs  pnm.rs  raw.rs  tiff.rs  webp.rs
zencodecs/tests/: avif_capability.rs  avif_gainmap_diagnostic.rs  bitmap_capability.rs  cross_codec_gainmap.rs  gainmap_e2e.rs  gainmap_integration.rs  gif_capability.rs  icc_srgb.rs  jpeg_capability.rs  jxl_capability.rs  png_capability.rs  raw_capability.rs  regress.rs  stop_and_limits.rs  stop_latency.rs  ultrahdr.rs  webp_capability.rs
zencodecs/tests/checksums/: avif.checksums  jpeg.checksums  jxl.checksums
zencodecs/tests/common/: mod.rs
zencodecs/zcimg/: Cargo.toml
zencodecs/zcimg/src/: main.rs
zeneditor/: Cargo.toml
zeneditor/src/: command.rs  decode.rs  encode.rs  lib.rs  pipeline.rs  state.rs  view_update.rs
zeneditor/src/model/: adjustment.rs  export.rs  geometry.rs  history.rs  mod.rs  recipe.rs  region.rs  schema.rs
zenfilters/: .gitignore  AutoModesSpec.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ParallelSpec.md  ROADMAP.md  SIMD_WARP_NOTES.md  justfile
zenfilters/.github/workflows/: ci.yml  gallery.yml
zenfilters/benches/: color_grading.rs
zenfilters/docs/: pipeline-guidance.md
zenfilters/examples/: bench_halo.rs  bench_math.rs  compare_autotune.rs  darktable_parity.rs  film_look_gallery.rs  fused_bench.rs  heaptrack_pipeline.rs  perf_probe.rs  scatter_passthrough_bench.rs  train_autotune.rs
zenfilters/site/: index.html
zenfilters/src/: access.rs  analysis.rs  context.rs  fast_math.rs  filter.rs  filter_compat.rs  fused_params.rs  lib.rs  masked.rs  param_schema.rs  planes.rs  prelude.rs  presets.rs  regional.rs  resize_pipeline.rs  scatter_gather.rs  segment.rs  slider.rs  srgb_filters.rs  zennode_defs.rs
zenfilters/src/document/: deskew.rs  homography.rs  lsd.rs  mod.rs
zenfilters/src/filters/: adaptive_sharpen.rs  asc_cdl.rs  auto_tone.rs  auto_vibrance.rs  auto_white_balance.rs  bilateral.rs  black_point.rs  bloom.rs  blur.rs  bw_mixer.rs  chromatic_aberration.rs  clarity.rs  cube_lut.rs  devignette.rs  dt_sigmoid.rs  edge_detect.rs  exposure.rs  film_looks.rs  fused_adjust.rs  gamut_expand.rs  grain.rs  guided_filter.rs  highlight_recovery.rs  hue_curves.rs  invert.rs  levels.rs  local_tone_map.rs  mod.rs  motion_blur.rs  noise_reduction.rs  saturation.rs  sepia.rs  shadow_lift.rs  sharpen.rs  sigmoid.rs  solarize.rs  temperature.rs  texture.rs  tint.rs  tone_curve.rs  (+5 more)
zenfilters/src/simd/: neon.rs  scalar.rs  wasm128.rs  wide_simd.rs
zenfilters/tests/: blur_sharpen_regression.rs  imagemagick_comparison.rs  quality_validation.rs  reference_validation.rs  zennode_defs.rs
zenpipe-cmd/: Cargo.toml
zenpipe-cmd/src/: args.rs  batch.rs  convert.rs  error.rs  info.rs  job_json.rs  main.rs  process.rs
(+1100 files in other folders)
