[package]
name = "zencodecs"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "Unified image codec abstraction over zenjpeg, zenwebp, zengif, zenavif, png, and ravif"
categories = ["multimedia::images"]
keywords = ["image", "codec", "jpeg", "webp", "avif"]
repository = "https://github.com/imazen/zencodecs"

[dependencies]
# Core (always available)
enough = "0.4.3"
whereat = { version = "0.1.5" }
thiserror = { version = "2.0", default-features = false }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"] }
imgref = "1.12"
bytemuck = { version = "1.25", default-features = false, features = ["extern_crate_alloc"] }
zencodec = { version = "0.1.12" }
zenpixels = { version = "0.2.2", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2.3", features = ["imgref"] }
linear-srgb = { version = "0.6.7", default-features = false }

# Codecs (all optional, feature-gated)
zenjpeg = { version = "0.8.1", optional = true, features = ["decoder", "zencodec", "trellis"] }
zenwebp = { version = "0.4.2", optional = true, features = ["zencodec"] }
zengif = { version = "0.7.1", optional = true, features = ["zencodec"] }
zenavif = { version = "0.1.2", optional = true, features = ["zencodec"] }
zenavif-parse = { version = "0.6.0", optional = true, features = ["eager"] }
zenpng = { version = "0.1.2", optional = true, features = ["zencodec"] }
zenjxl = { version = "0.1.0", optional = true, default-features = false, features = ["zencodec"] }
heic = { version = "0.1.1", optional = true, default-features = false, features = ["zencodec"] }
zenbitmaps = { version = "0.1.3", optional = true, features = ["zencodec"] }
zentiff = { version = "0.1.0", optional = true, features = ["zencodec"] }
zenraw = { version = "0.1.1", optional = true, default-features = false, features = ["rawloader", "std", "zencodec", "exif"] }
zenjp2 = { optional = true, features = ["zencodec"] , version = "0.1.0" }
zensvg = { optional = true , version = "0.1.0" }

# Node definitions (optional)
zennode = { version = "0.1.1", default-features = false, features = ["derive"], optional = true }

# Color management (optional)
moxcms = { version = "0.8.1", optional = true, default-features = false }

# libjpeg-turbo reference encoder for quality calibration (optional)
turbojpeg = { version = "1.4", optional = true }

[dev-dependencies]
png = "0.18"
zensim-regress = { version = "0.3.0" }
codec-corpus = "1"
fast-ssim2 = { version = "0.7.1", features = ["imgref"] }
rayon = "1"

[features]
default = ["jpeg", "webp", "gif", "gif-zenquant", "png", "png-zenquant", "avif-decode", "jxl-decode", "heic-decode", "bitmaps-bmp", "zennode"]
std = []

# Individual codec features
jpeg = ["dep:zenjpeg"]
jpeg-ultrahdr = ["jpeg", "zenjpeg/ultrahdr"]
webp = ["dep:zenwebp"]
gif = ["dep:zengif"]
gif-zenquant = ["gif", "zengif/zenquant"]
gif-quantizr = ["gif", "zengif/quantizr"]
gif-imagequant = ["gif", "zengif/imagequant"]
png = ["dep:zenpng"]
png-zenquant = ["png", "zenpng/quantize"]
png-imagequant = ["png", "zenpng/imagequant"]
avif-decode = ["dep:zenavif"]
avif-encode = ["dep:zenavif", "zenavif/encode", "dep:zenavif-parse"]
jxl-decode = ["dep:zenjxl", "zenjxl/decode"]
jxl-encode = ["dep:zenjxl", "zenjxl/encode"]
heic-decode = ["dep:heic"]
bitmaps = ["dep:zenbitmaps"]
bitmaps-bmp = ["bitmaps", "zenbitmaps/bmp"]
bitmaps-qoi = ["bitmaps", "zenbitmaps/qoi"]
bitmaps-tga = ["bitmaps", "zenbitmaps/tga"]
bitmaps-hdr = ["bitmaps", "zenbitmaps/hdr"]
tiff = ["dep:zentiff"]
raw-decode = ["dep:zenraw"]
jp2-decode = ["dep:zenjp2"]
svg = ["dep:zensvg"]
raw-decode-exif = ["raw-decode", "zenraw/exif"]
raw-decode-xmp = ["raw-decode", "zenraw/xmp"]
raw-decode-gainmap = ["raw-decode", "zenraw/apple", "jpeg-ultrahdr"]

# RIAPI codec key parsing
riapi = []

# zennode node definitions
zennode = ["dep:zennode"]

# Color management — ICC profile analysis, sRGB structural detection, profile synthesis
cms = ["dep:moxcms"]

# All codecs
all = ["jpeg", "jpeg-ultrahdr", "webp", "gif", "gif-zenquant", "gif-quantizr", "png", "png-zenquant", "avif-decode", "avif-encode", "jxl-decode", "jxl-encode", "heic-decode", "bitmaps", "bitmaps-bmp", "bitmaps-qoi", "bitmaps-tga", "bitmaps-hdr", "tiff", "raw-decode", "raw-decode-exif", "raw-decode-xmp", "raw-decode-gainmap", "jp2-decode", "svg"]

# Calibration harness (all lossy encoders)
calibrate = ["jpeg", "webp", "png", "avif-decode", "avif-encode", "jxl-decode", "jxl-encode", "std", "dep:turbojpeg"]

[[example]]
name = "metadata_roundtrip"
required-features = ["all", "std"]

[[example]]
name = "gainmap_roundtrip"
required-features = ["all", "std"]

[[example]]
name = "gainmap_inspect"
required-features = ["jpeg-ultrahdr", "std"]

[[example]]
name = "icc_roundtrip"
required-features = ["all", "std"]

[[example]]
name = "wasm_roundtrip"
required-features = ["std"]

[[example]]
name = "bench_wasm"
required-features = ["std"]

[[example]]
name = "heaptrack_zencodec_traits"
required-features = ["std"]

[[example]]
name = "quality_calibrate"
required-features = ["calibrate"]

[patch.crates-io]
zencodec = { path = "../zencodec" }

[package.metadata.superwork.ci]
strategy = "strip_path"

