[package]
name = "zenpipe"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "Streaming pixel pipeline — zero-materialization graph execution over zen crates"
repository = "https://github.com/imazen/zenpipe"
keywords = ["image", "pipeline", "streaming", "scanline"]
categories = ["graphics", "multimedia::images"]
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[features]
default = ["std", "lossless-jpeg"]
# Enables zenfilters, moxcms ICC CMS, and std on all deps.
# Without this feature, the core pipeline still works (resize, blend, codec,
# animation, format conversion) in a no_std + alloc environment.
std = [
    "zenresize/std",
    "zenpixels-convert/std",
    "zenpixels-convert/cms-moxcms",
    "enough/std",
    "dep:zenfilters",
    "dep:moxcms",
]
# Bridge from zennode NodeInstance to PipelineGraph NodeOps.
zennode = ["dep:zennode", "dep:zencodecs", "zencodecs/zennode"]
# Local-dev only: gate bridge tests requiring zennode_defs modules in zenresize/zenlayout.
# These modules are WIP (commented out in those crates) and not available via git. Never enabled in CI.
zennode-defs = ["zennode"]
# High-level bytes-in/bytes-out job API (requires zennode + std + zencodecs CMS + gain map support).
job = ["zennode", "std", "zencodecs/cms", "zencodecs/jpeg-ultrahdr"]
# JSON Schema / OpenAPI schema export from node registry.
json-schema = ["zennode", "zennode/json-schema", "zencodecs/zennode", "dep:serde_json"]
# Imageflow v2 compat: translate v2 Node/EncoderPreset/Framewise/Build001 to zen pipeline.
imageflow-compat = [
    "job", "nodes-filters", "nodes-png", "nodes-webp",
    "nodes-gif",
    "dep:imageflow_types", "dep:imageflow_riapi",
]

# ── Node registry features ──
# Each enables zennode + the codec dep for pipeline use.
# Codec/quantize node definitions now live in crate::zennode_defs.
nodes-jpeg = ["zennode", "dep:zenjpeg", "zencodecs/jpeg"]
nodes-png = ["zennode", "dep:zenpng", "zencodecs/png"]
nodes-webp = ["zennode", "dep:zenwebp", "zencodecs/webp"]
nodes-gif = ["zennode", "dep:zengif", "zencodecs/gif"]
nodes-avif = ["zennode", "dep:zenavif", "zencodecs/avif-decode"]
nodes-jxl = ["zennode", "dep:zenjxl", "zencodecs/jxl-decode"]
nodes-tiff = ["zennode", "dep:zentiff", "zencodecs/tiff"]
nodes-bmp = ["zennode", "dep:zenbitmaps", "zencodecs/bitmaps-bmp"]
# Geometry and resize nodes now live in zenpipe's own zennode_defs.
# These features are kept as backward-compatible aliases.
nodes-resize = ["zennode"]
nodes-layout = ["zennode"]
nodes-quant = ["zennode", "dep:zenquant"]
nodes-filters = ["zennode", "std", "zenfilters/zennode"]
nodes-faces = ["zennode", "std", "dep:zensally", "dep:zensally-zentract"]
# Lossless JPEG fast path for orient-only pipelines (~10x faster, zero gen loss).
# Uses zenjpeg::lossless::transform() on DCT coefficients.
lossless-jpeg = ["zennode", "dep:zenjpeg"]
nodes-heic = ["zennode", "zencodecs/heic-decode"]
nodes-all = [
    "nodes-jpeg", "nodes-png", "nodes-webp", "nodes-gif",
    "nodes-avif", "nodes-jxl", "nodes-tiff", "nodes-bmp",
    "nodes-resize", "nodes-layout", "nodes-quant", "nodes-filters",
    "nodes-heic",
]

[dependencies]
# Streaming resize (V-first, row push/pull, ring buffer)
zenresize = { path = "../zenresize", default-features = false , version = "0.2.0" }
# Image layout: constraint modes, orientation, smart crop
zenlayout = { path = "zenlayout", default-features = false, features = ["smart-crop"] , version = "0.2.1" }
# Blend modes on premultiplied linear f32 RGBA rows (SIMD-accelerated)
zenblend = { path = "../zenblend", default-features = false , version = "0.1.2" }
# Pixel format descriptors and row-level conversion (transfer functions, gamut matrices, alpha)
zenpixels-convert = { version = "0.2.2", default-features = false }
# Pixel buffer types, ColorContext, ICC/CICP metadata
zenpixels = { version = "0.2.2", default-features = false }
# Codec trait abstraction (decode/encode, animation, streaming)
zencodec = { version = "0.1.16", default-features = false }
# Cooperative cancellation
enough = { version = "0.4", default-features = false }
# Error location tracking (re-exported by zenpixels for BufferError)
whereat = { version = "0.1.5", default-features = false }
# Linear ↔ sRGB color space conversion (LUT-based, no_std)
linear-srgb = { path = "../linear-srgb", default-features = false , version = "0.6.7" }
# f32 ↔ u8 reinterpretation
bytemuck = { version = "1", features = ["derive"] }
# HashMap for graph compilation
hashbrown = "0.16.1"
# Photo filters on planar Oklab f32 (SIMD-accelerated) — requires std
zenfilters = { path = "zenfilters", optional = true , version = "0.1.0" }
# ICC color management (SIMD-accelerated, pure Rust) — requires std
moxcms = { version = "*", optional = true }
# Self-documenting node definitions — bridges zennode types into PipelineGraph
zennode = { path = "../zennode/zennode", default-features = false, features = ["derive"], optional = true , version = "0.1.1" }
# Unified codec dispatch — node definitions for codec/quantize/quality-intent
zencodecs = { path = "zencodecs", default-features = false, optional = true , version = "0.1.0" }

# ── Optional codec crates for node registry ──
# Note: default-features enabled because zenjpeg's codec.rs unconditionally
# references search::ExpertConfig which requires the `trellis` default feature.
zenjpeg = { path = "../zenjpeg/zenjpeg", features = ["zencodec"], optional = true , version = "0.8.2" }
zenpng = { path = "../zenpng", default-features = false, features = ["zencodec"], optional = true , version = "0.1.0" }
zenwebp = { path = "../zenwebp", default-features = false, features = ["zencodec"], optional = true , version = "0.4.2" }
zengif = { path = "../zengif", default-features = false, features = ["zencodec"], optional = true , version = "0.7.1" }
zenavif = { path = "../zenavif", default-features = false, features = ["zencodec"], optional = true , version = "0.1.3" }
zenjxl = { path = "../zenjxl", default-features = false, features = ["zencodec"], optional = true , version = "0.1.0" }
zentiff = { path = "../zenextras/zentiff", default-features = false, optional = true , version = "0.1.0" }
zenbitmaps = { path = "../zenbitmaps", default-features = false, optional = true , version = "0.1.3" }
zenquant = { path = "../zenquant", default-features = false, optional = true , version = "0.1.2" }
# JSON serialization (optional — for schema export)
serde_json = { version = "1", optional = true }
# Imageflow v2 compatibility (optional — for running legacy imageflow pipelines)
imageflow_types = { path = "../../imageflow/imageflow_types", optional = true , version = "0.1.0" }
imageflow_riapi = { path = "../../imageflow/imageflow_riapi", optional = true , version = "0.1.0" }
# Face detection + saliency via zentract plugin (optional)
zensally = { path = "../zensally/crates/zensally", default-features = false, features = ["zenlayout", "serde"], optional = true , version = "0.1.0" }
zensally-zentract = { path = "../zensally/crates/zensally-zentract", default-features = false, features = ["analyzer"], optional = true , version = "0.1.0" }

[dev-dependencies]
# Dev-deps enable extra features on the optional codec crates above.
# zenjpeg and zengif are used in integration tests (streaming_codec, bridge_codec).
zenjpeg = { path = "../zenjpeg/zenjpeg", features = ["zencodec"] , version = "0.8.2" }
zengif = { path = "../zengif", features = ["zencodec", "quantizr"] , version = "0.7.1" }
zennode = { path = "../zennode/zennode", features = ["derive"] , version = "0.1.1" }
serde_json = "1"
codec-corpus = "1"
imgref = "1.12"
rgb = { version = "0.8", features = ["as-bytes"] }
zenbench = "0.1.3"
zenbitmaps = { path = "../zenbitmaps", features = ["bmp"] , version = "0.1.3" }

[[example]]
name = "bench_windowed"
required-features = ["std"]

[[bench]]
name = "session_cache"
harness = false
required-features = ["zennode", "std"]

[workspace]
members = ["zencodecs", "zenfilters", "zenlayout", "zenpipe-cmd", "zeneditor"]

[patch.crates-io]
# Consolidated from workspace members — all path deps for local development
zenpixels = { path = "../zenpixels/zenpixels" }
zenpixels-convert = { path = "../zenpixels/zenpixels-convert" }
zennode = { path = "../zennode/zennode" }
zennode-derive = { path = "../zennode/zennode-derive" }
zencodec = { path = "../zencodec" }

# Override zenresize's git dep on zenlayout to use our workspace copy
[patch."https://github.com/imazen/zenlayout.git"]
zenlayout = { path = "zenlayout" }

[package.metadata.superwork.ci]
strategy = "strip_path"
delete = ["imageflow_types", "imageflow_riapi", "zensally", "zensally-zentract"]
