[package]
name = "zencodecs"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-or-later"
description = "Unified image codec abstraction over zenjpeg, zenwebp, zengif, zenavif, png, and ravif"
categories = ["multimedia::images"]
keywords = ["image", "codec", "jpeg", "webp", "avif"]
repository = "https://github.com/imazen/zencodecs"

[dependencies]
# Core (always available)
enough = "0.4"
whereat = "0.1.4"
thiserror = { version = "2.0", default-features = false }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"] }
imgref = "1.12"
bytemuck = { version = "1.25", default-features = false, features = ["extern_crate_alloc"] }
zencodec = { path = "../zencodec" }
zenpixels = { version = "0.2", path = "../zenpixels/zenpixels", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2", path = "../zenpixels/zenpixels-convert", features = ["imgref"] }
linear-srgb = { version = "0.6.3", default-features = false }

# Codecs (all optional, feature-gated)
zenjpeg = { path = "../zenjpeg/zenjpeg", optional = true, features = ["decoder", "zencodec"] }
zenwebp = { path = "../zenwebp", optional = true, features = ["zencodec"] }
zengif = { path = "../zengif", optional = true, features = ["zencodec"] }
zenavif = { path = "../zenavif", optional = true, features = ["zencodec"] }
zenavif-parse = { path = "../zenavif-parse", optional = true, features = ["eager"] }
zenpng = { path = "../zenpng", optional = true, features = ["zencodec"] }
zenjxl = { path = "../zenjxl", optional = true, default-features = false, features = ["zencodec"] }
# heic-decoder = { path = "../heic-decoder-rs", optional = true, default-features = false, features = ["zencodec"] }  # not cloned locally
zenbitmaps = { path = "../zenbitmaps", optional = true, features = ["zencodec"] }
zenraw = { path = "../zenraw", optional = true, default-features = false, features = ["rawloader", "std", "zencodec", "exif"] }

# Node definitions (optional)
zennode = { path = "../zennode/zennode", default-features = false, features = ["derive"], optional = true }

# Color management (optional)
# moxcms = { version = "0.8", optional = true, default-features = false }  # Disabled for now

[dev-dependencies]
png = "0.18"
zensim-regress = { path = "../zensim/zensim-regress" }
codec-corpus = "1"
fast-ssim2 = { path = "../fast-ssim2/fast-ssim2", features = ["imgref"] }
rayon = "1"
turbojpeg = "1.4"

[features]
default = ["jpeg", "webp", "gif", "gif-zenquant", "png", "png-zenquant", "avif-decode", "avif-encode", "jxl-decode", "bitmaps-bmp"]
std = []

# Individual codec features
jpeg = ["dep:zenjpeg"]
jpeg-ultrahdr = ["jpeg", "zenjpeg/ultrahdr"]
webp = ["dep:zenwebp"]
gif = ["dep:zengif"]
gif-zenquant = ["gif", "zengif/zenquant"]
gif-quantizr = ["gif", "zengif/quantizr"]
gif-imagequant = ["gif", "zengif/imagequant"]
png = ["dep:zenpng"]
png-zenquant = ["png", "zenpng/quantize"]
avif-decode = ["dep:zenavif"]
avif-encode = ["dep:zenavif", "zenavif/encode", "dep:zenavif-parse"]
jxl-decode = ["dep:zenjxl", "zenjxl/decode"]
jxl-encode = ["dep:zenjxl", "zenjxl/encode"]
# heic-decode = ["dep:heic-decoder"]  # not cloned locally
bitmaps = ["dep:zenbitmaps"]
bitmaps-bmp = ["bitmaps", "zenbitmaps/bmp"]
raw-decode = ["dep:zenraw"]
raw-decode-exif = ["raw-decode", "zenraw/exif"]
raw-decode-xmp = ["raw-decode", "zenraw/xmp"]
raw-decode-gainmap = ["raw-decode", "zenraw/apple", "jpeg-ultrahdr"]

# RIAPI codec key parsing
riapi = []

# zennode node definitions
zennode = ["dep:zennode"]

# Color management
moxcms = []  # Disabled for now

# All codecs
all = ["jpeg", "jpeg-ultrahdr", "webp", "gif", "gif-zenquant", "gif-quantizr", "png", "png-zenquant", "avif-decode", "avif-encode", "jxl-decode", "jxl-encode", "bitmaps-bmp", "raw-decode", "raw-decode-exif", "raw-decode-xmp", "raw-decode-gainmap"]

# Calibration harness (all lossy encoders)
calibrate = ["jpeg", "webp", "png", "avif-decode", "avif-encode", "jxl-decode", "jxl-encode", "std"]

[[example]]
name = "metadata_roundtrip"
required-features = ["all", "std"]

[[example]]
name = "gainmap_roundtrip"
required-features = ["all", "std"]

[[example]]
name = "gainmap_inspect"
required-features = ["jpeg-ultrahdr", "std"]

[[example]]
name = "icc_roundtrip"
required-features = ["all", "std"]

[[example]]
name = "wasm_roundtrip"
required-features = ["std"]

[[example]]
name = "bench_wasm"
required-features = ["std"]

[[example]]
name = "heaptrack_zencodec_traits"
required-features = ["std"]

[[example]]
name = "quality_calibrate"
required-features = ["calibrate"]

[patch.crates-io]
zenpixels = { path = "../zenpixels/zenpixels" }
zenpixels-convert = { path = "../zenpixels/zenpixels-convert" }

