[package]
name = "zeneditor"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "Platform-agnostic image editor model and controller — Command/ViewUpdate protocol over zenpipe"
repository = "https://github.com/imazen/zenpipe"
keywords = ["image", "editor", "pipeline"]
categories = ["graphics", "multimedia::images"]
publish = false

[features]
default = ["std", "encode", "decode"]
std = [
    "zenpipe/std",
    "zenpipe/zennode",
    "zenpipe/nodes-filters",
    "zenpipe/json-schema",
    "dep:zenfilters",
]
# Encoding via zencodecs (JPEG, WebP, PNG, GIF, JXL, AVIF).
encode = [
    "dep:zencodecs",
    "zencodecs/jpeg", "zencodecs/png", "zencodecs/webp",
    "zencodecs/gif", "zencodecs/gif-quantizr",
    "zencodecs/jxl-encode", "zencodecs/avif-encode",
]
# Native decoding via zencodecs (JXL, AVIF, HEIC, BMP, QOI, TGA, HDR + browser-native formats).
decode = [
    "dep:zencodecs",
    "zencodecs/jpeg", "zencodecs/png", "zencodecs/webp", "zencodecs/gif",
    "zencodecs/jxl-decode", "zencodecs/avif-decode", "zencodecs/heic-decode",
    "zencodecs/bitmaps", "zencodecs/bitmaps-bmp",
    "zencodecs/bitmaps-qoi", "zencodecs/bitmaps-tga", "zencodecs/bitmaps-hdr",
]

[dependencies]
# Core pipeline (parent directory)
zenpipe = { path = "..", default-features = false, features = ["zennode"] }
zennode.workspace = true

# Photo filters (workspace sibling)
zenfilters = { workspace = true, features = ["zennode"], optional = true }

# Codec traits and types (Metadata, ImageFormat)
zencodec.workspace = true

# Pixel format descriptors
zenpixels.workspace = true

# Cooperative cancellation
enough.workspace = true

# Serialization for Command/ViewUpdate protocol and adjustment maps
serde.workspace = true
serde_json.workspace = true

# Unified codec dispatch for encoding and decoding (workspace sibling).
zencodecs = { workspace = true, optional = true }

[dev-dependencies]
zenfilters = { workspace = true, features = ["zennode"] }
zencodecs = { workspace = true, features = [
    "jpeg", "png", "webp", "gif", "gif-quantizr",
    "jxl-encode", "avif-encode",
    "jxl-decode", "avif-decode", "heic-decode",
    "bitmaps", "bitmaps-bmp", "bitmaps-qoi", "bitmaps-tga", "bitmaps-hdr",
] }
