[package]
name = "zenpipe-cmd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "CLI for zenpipe — replace ImageMagick/vips/Pillow with one binary"
repository = "https://github.com/imazen/zenpipe"
keywords = ["image", "cli", "convert", "resize", "pipeline"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "zenpipe"
path = "src/main.rs"

[dependencies]
zenpipe = { path = "..", features = [
    "job",
    "nodes-jpeg", "nodes-png", "nodes-webp", "nodes-gif",
    "nodes-jxl", "nodes-bmp",
    "nodes-resize", "nodes-layout", "nodes-quant",
    "nodes-filters",
    "std", "lossless-jpeg",
] }
zennode = { path = "../../zennode/zennode", features = ["derive", "serde"] }

clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3.2"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# [patch.crates-io] moved to workspace root Cargo.toml

[package.metadata.superwork.ci]
strategy = "git_url"
delete = ["imageflow_types", "imageflow_riapi"]
